Fix for a bunch of test from the tests module